5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4478/executions/1764_762.log
== SUBMITION (2019-05-30 12:23:21) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[2:4])
ano = data[4:]
if(mes >= 1 and mes <= 12):
	mess = mes - 1
	mes1 = vm[mess]
print(dia,"de",mes1,"de",ano)
-- EXECUTION TIME:
0.464915
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/762/main.py", line 10, in <module>
    mes1 = vm[mess]
NameError: name 'vm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 12:23:23) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[2:4])
ano = data[4:]
if(mes >= 1 and mes <= 12):
	mess = mes - 1
	mes1 = vm[mess]
print(dia,"de",mes1,"de",ano)
-- EXECUTION TIME:
0.345296
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/762/main.py", line 10, in <module>
    mes1 = vm[mess]
NameError: name 'vm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 12:23:25) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[2:4])
ano = data[4:]
if(mes >= 1 and mes <= 12):
	mess = mes - 1
	mes1 = vm[mess]
print(dia,"de",mes1,"de",ano)
-- EXECUTION TIME:
0.450635
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/762/main.py", line 10, in <module>
    mes1 = vm[mess]
NameError: name 'vm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 15:54:01) 
-- CODE:
from numpy import *

# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

data = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[2:4])
ano = data[4:]

if(mes >= 1 and mes <= 12):
	mess = mes - 1
	mes1 = vm[mess]


print(dia,"de",mes1,"de",ano)
-- EXECUTION TIME:
0.445451
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
07 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22 de agosto de 2000
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
